--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtToken": {
+    "Issuer": "Issuer",
+    "Audience": "Audience",
+    "LifetimeInMinutes": 60
+  },
+  "RefreshToken": {
+    "LifetimeInDays": 7
+  }
 }
