features/email_notifications

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -13,5 +13,11 @@
   },
   "RefreshToken": {
     "LifetimeInDays": 7
+  },
+  "Email": {
+    "SenderEmail": "events@noreply.com",
+    "SenderName": "Events",
+    "Host": "localhost",
+    "Port": "25"
   }
 }
