features/event_images

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -19,5 +19,12 @@
     "SenderName": "Events",
     "Host": "localhost",
     "Port": "25"
+  },
+  "AWS": {
+    "ServiceURL": "http://localhost:9000",
+    "AccessKey": "admin",
+    "SecretKey": "password",
+    "BucketName": "event-images",
+    "Region": "us-east-1"
   }
 }
