--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -5,11 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Host=db;Port=5432;Database=events_db;Username=postgres;Password=root;TrustServerCertificate=true"
+  },
   "AllowedHosts": "*",
   "JwtToken": {
     "Issuer": "Issuer",
     "Audience": "Audience",
-    "LifetimeInMinutes": 60
+    "LifetimeInMinutes": 60,
+    "SecretKey": "LastChristmas,IgaveyoumyheartButtheverynextday,yougaveitawayThisyear,tosavemefromtearsI'llgiveittosomeonespecial"
   },
   "RefreshToken": {
     "LifetimeInDays": 7
@@ -17,11 +21,12 @@
   "Email": {
     "SenderEmail": "events@noreply.com",
     "SenderName": "Events",
-    "Host": "localhost",
+    "Host": "smtp-server",
     "Port": "25"
   },
   "AWS": {
-    "ServiceURL": "http://localhost:9000",
+    "ServiceURL": "http://minio:9000",
+    "PublicUrl": "http://localhost:9000",
     "AccessKey": "admin",
     "SecretKey": "password",
     "BucketName": "event-images",
